--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=treetoplodge-api
+server.port=8080
+
+#Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/treetoplodge_db
+spring.datasource.username=postgres
+spring.datasource.password=phai
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# JWT Configuration
+app.jwt.secret=treetoplodgeSecretKey123456789012345678901234567890
+app.jwt.expiration-ms=86400000
+app.jwt.refresh-expiration-ms=604800000
+
+# Logging for security debugging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.treetoplodge.treetoplodge_api.security=DEBUG
+
+# OTP Configuration (seems needed by your existing code)
+spring.otp.sms.expire=5
+spring.otp.sms.template=Your OTP code is {0}
