Refactor code structure for improved readability and maintainability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+
+# File Upload Configuration
+file.upload-dir=uploads
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+app.public-url=http://localhost:8081
+
 # JWT Configuration
 app.jwt.secret=treetoplodgeSecretKey123456789012345678901234567890
 app.jwt.expiration-ms=86400000
