feat: Enhance FoodBeverageController to return paged responses
feat: Add success response method to ApiResponse for string data

feat: Implement automatic accommodation ID generation in Accommodation model

feat: Update SecurityConfig to allow access to food-beverages and upload endpoints

refactor: Modify FileUploadService to return DeleteResult for batch deletions

fix: Remove unused validator from AccommodationServiceImpl

chore: Update application properties to include public URL configuration

delete: Remove unused accommodation images and files from uploads directory

feat: Create DeleteResult model to encapsulate results of file deletions

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "file.upload-dir",
-  "type": "java.lang.String",
-  "description": "A description for 'file.upload-dir'"
-}]}
+{"properties": [
+  {
+    "name": "file.upload-dir",
+    "type": "java.lang.String",
+    "description": "A description for 'file.upload-dir'"
+  },
+  {
+    "name": "app.public-url",
+    "type": "java.lang.String",
+    "description": "A description for 'app.public-url'"
+  }
+]}
