--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+# HTTPS Configuration
+# server.ssl.enabled=true
+# server.ssl.key-store-type=PKCS12
+# server.ssl.key-store=classpath:keystore.p12
+# server.ssl.key-store-password=yourpassword
+# server.ssl.key-alias=tomcat
+# server.port=8443  
 
 # File Upload Configuration
 file.upload-dir=uploads
